testsuite/escript/oper/singleequal02.err
singleequal02.src:3:5: error: Deprecated '=' found: did you mean '==' or ':='?
