testsuite/escript/oper/singleequal02.src
var a;

a = 6;